<resources>
    <string name="app_name">MiPrimerApp</string>
    <string name="register">Registro</string>
    <string name="ConfirmarD">Confirmar Datos</string>
    <string name="buttonsig">SIGUIENTE</string>
    <string name="buttonEditar">EDITAR DATOS</string>
    <string name="Nombre">Nombre Completo</string>
    <string name="Fecha">Fecha</string>
    <string name="Telefono">Telefono</string>
    <string name="Email">Email</string>
    <string name="Descripcion">Descripcion del contacto</string>
</resources>